# copilot-candidature

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  cv_import.py  cv_pdf.py  database.py  job_discovery.py  job_import.py  job_search.py  main.py  matching.py  models.py
app/static/: app.js  index.html  styles.css
docs/: BROWSER_SEARCH.md  ROADMAP.md
tests/: test_api.py  test_cv_import.py  test_job_discovery.py  test_job_import.py  test_job_search.py  test_matching.py
